Web security changed so it wont be deprecated + imports optimized